css/landing.css
/* ... */
.nav-wraper ul li a {
    font-family: 'Gilroy-Medium';
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
    color: #061A40;
}

.navButton-inMenu {
    display: none;
}

.fa-bars {
    display: none;
    width: 24px;
    height: 24px;
}

.navButton button {
    cursor: pointer;
    background: #039ED6;
    border-radius: 48px;
    padding: 16px 40px;

    font-family: 'Gilroy-Medium';
    font-size: 20px;
    text-align: center;
    color: #FFFFFF;

    transition: 1s;
}

.navButton button:hover {
    background-color: #FFFFFF;
    border: 1px solid #039ED6;

    color: #039ED6;
}

.fa-xmark {
    display: none;
}

@media(max-width: 1265px) {
    .nav-wraper ul {
        display: flex;
        gap: 20px;
    }

    .nav-wraper ul li a {
        font-size: 16px;
    }

    .navButton button {
        padding: 12px 32px;
        font-size: 16px;
    }
}


@media (max-width: 1024px) {
    /* NAV */
    .ul-newsli {
        display: flex;
    }
    .navButton-inMenu {
        display: flex;
        position: absolute;
        top: 400px;
        right: 0;
        
    }
    .navButton-inMenu button {
        cursor: pointer;
        background: #0C2D6C;
        border-radius: 10px;

        font-family: 'Inter';
        font-style: normal;
        font-weight: 600;
        font-size: 12px;
        text-align: center;
        color: #FFFFFF;
        padding: 16px 20px;
        margin: 0 16px;

        background-size: 300% 100%;

        -moz-transition: all .4s ease-in-out;
        -o-transition: all .4s ease-in-out;
        -webkit-transition: all .4s ease-in-out;
        transition: all .4s ease-in-out;
    }
    .navButton-inMenu button:hover {
        background-position: 100% 0;
        -moz-transition: all .4s ease-in-out;
        -o-transition: all .4s ease-in-out;
        -webkit-transition: all .4s ease-in-out;
        transition: all .4s ease-in-out;
        background-image: linear-gradient(to right, #0b285e, #1a4fb3, #0b285e, #1a4fb3);
        box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
    }
    
    .navButton-inMenu button:focus {
        outline: none;
    }

    .navButton {
        display: none;
    }
     


    .nav-links {
        position: absolute;
        background-color: #039ED6;
        height: 100vh;
        width: 200px;
        top: 0;
        right: -200px;
        text-align: left;
        z-index: 10;
    }

    .nav-links ul li {
        display: block;
        padding-left: 6px;
        flex-direction: column;
        gap: 2px;
        width: 100%;
        padding: 10px 15px;
        text-align: right;

    }

    .nav-links ul li a {
        font-weight: 600;
        transition: all 0.5s ease-in;
    }

    .nav-links ul {
        display: flex;
        flex-direction: column;
        gap: 2px;
        width: 100%;
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 110px;
        right: 5px;
    }
    .nav-links ul li a:hover {
        padding-right: 45px
    }

    .fa-solid {
        display: block;
        cursor: pointer;
        width: 20px;
    }

    .fa-xmark {
        position: absolute;
        top: 50px;
        left: 20px;
    }

    .nav-links>svg path {
        fill: #FFFFFF
    }

    .nav-links {
        transition: 1s;
    }
}

@media (max-width: 620px) {
    .nav-wraper img {
        width: 56px;
    }
}
@media (max-width: 560px) {
    .nav-wraper img {
        width: 48px;
    }
    .nav-wraper svg {
        width: 16px;
    }
}

/* 1 SLIDER */

.slider {
    width: 100%;
    display: flex;
}

.slide {
    background: url(../image-landing/Slider-1/Slide-img.png), rgba(0, 0, 0, 0.16);
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
    padding: 120px 0 120px 224px;
}

.slider-navigation {
    display: flex;
    justify-content: center;
    gap: 10px;
}

.slide:nth-child(2) {
    background: url(../image-landing/Slider-1/Slide-2.png), rgba(0, 0, 0, 0.16);
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
    padding: 120px 0 120px 224px;
}

.slick-dots {
    display: flex !important;
    gap: 15px;

    position: absolute;
    left: 50%;
    bottom: 40px;
}




.slick-arrow {
    background: rgba(0, 0, 0, 0.24);
    border-radius: 50%;
    width: 84px;
    height: 84px;
    position: absolute;
    z-index: 2;
    top: 50%;
    color: transparent;

    background: url(../image-landing/Slider-1/Vector.svg);
    background-size: cover;
    background-repeat: no-repeat;
    margin-top: -42px;
    cursor: pointer;
}

.slick-next {
    right: 40px;
}

.slick-prev {
    left: 40px;
    transform: rotate(180deg);
}


.slick-dots button {
    border: 2px solid #099ed0;
    border-radius: 50%;
    width: 16px;
    height: 16px;
    transition: 0.4s;
}

.slick-dots .slick-active button {
    background-color: #039ED6;
}

.slick-dots {
    position: absolute;
    bottom: 20px;
    left: 50%;
}

.slick-dots button {
    color: transparent;
    cursor: pointer;
}


.textSlider {
    display: flex;
    flex-direction: column;
    gap: 64px;
}

.textSlider h2 {
    font-family: 'Gilroy-Bold';
    font-style: normal;
    font-weight: 700;
    font-size: 48px;
    line-height: 59px;

    color: #EFEFEF;
}

.slidebuttons-div {
    display: flex;
    gap: 15px;
}

.skyblue-button {
    cursor: pointer;
    background: #039ED6;
    border-radius: 12px;
    padding: 20px 44px;

    font-family: 'Inter';
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    text-align: center;
    color: #FFFFFF;

    background-size: 300% 100%;

    -moz-transition: all .4s ease-in-out;
    -o-transition: all .4s ease-in-out;
    -webkit-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
}
/* ... */

